--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,3 +1,32 @@
+/* Estilo para la navbar */
+.navbar {
+    background-color: #000; /* Fondo negro */
+}
+
+.navbar .navbar-brand,
+.navbar .navbar-text,
+.navbar .btn {
+    color: #fff; /* Color blanco para las letras de la navbar */
+}
+
+.navbar .navbar-brand:hover,
+.navbar .navbar-text:hover,
+.navbar .btn:hover {
+    color: #ccc; /* Color gris claro al pasar el ratón */
+}
+
+.navbar-logo {
+    height: 70px; /* Ajusta la altura del logo */
+    object-fit: contain; /* Mantener la relación de aspecto */
+}
+
+/* Estilo específico para el texto de Star Wars */
+.star-wars-text {
+    color: #1E90FF !important; /* Color azul */
+    font-family: 'Star Jedi', sans-serif; /* Puedes usar una fuente de Star Wars si tienes una, o cualquier fuente que prefieras */
+    font-size: 30px;
+}
+
 /* Fondo y configuración general */
 body, html {
     margin: 0;
@@ -68,7 +97,7 @@ h2 {
 .card-img-top {
     width: 100%;
     height: 250px; /* Ajuste uniforme de la altura de las imágenes */
-    object-fit: contain; /* Ajustar la imagen dentro del contenedor sin recortarse */
+    object-fit: contain; /* Ajustar la imagen dentro del contenedor para cubrirlo sin distorsión */
     object-position: center; /* Centrar la imagen */
     background-color: #000; /* Fondo negro para espacios vacíos */
 }
@@ -78,6 +107,7 @@ h2 {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    height: calc(100% - 250px); /* Asegura que el body ocupe el espacio restante debajo de la imagen */
 }
 
 .card-title, .card-text {
