--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -78,7 +78,7 @@ h2 {
 .card {
     flex-shrink: 0; /* Evitar que las tarjetas se reduzcan */
     width: 18rem;
-    height: 400px; /* Forzar un tamaño fijo en la altura de la tarjeta */
+    height: 420px; /* Forzar un tamaño fijo en la altura de la tarjeta */
     margin: 0 10px;
     overflow: hidden;
     background-color: #1c1c1c;
@@ -90,6 +90,11 @@ h2 {
     justify-content: space-between;
 }
 
+.card-img-top.characters {
+    object-fit: contain; /* Asegura que la imagen completa se ajuste dentro del contenedor */
+}
+
+
 .card:hover {
     transform: translateY(-5px); /* Efecto de levantar al hacer hover */
 }
@@ -97,7 +102,7 @@ h2 {
 .card-img-top {
     width: 100%;
     height: 250px; /* Ajuste uniforme de la altura de las imágenes */
-    object-fit: contain; /* Ajustar la imagen dentro del contenedor para cubrirlo sin distorsión */
+    object-fit: cover; /* Ajustar la imagen dentro del contenedor para cubrirlo sin distorsión */
     object-position: center; /* Centrar la imagen */
     background-color: #000; /* Fondo negro para espacios vacíos */
 }
@@ -107,7 +112,7 @@ h2 {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    height: calc(100% - 250px); /* Asegura que el body ocupe el espacio restante debajo de la imagen */
+    height: 150px; /* Altura fija para el cuerpo de la tarjeta */
 }
 
 .card-title, .card-text {
@@ -166,4 +171,40 @@ h2 {
 
 .arrow-right {
     right: -20px;
+}
+
+/* Estilo para el contenedor de detalles del personaje */
+.character-details-container {
+    display: flex;
+    align-items: center;
+    padding: 20px;
+    background-color: #1c1c1c; /* Fondo oscuro para destacar la imagen y los detalles */
+    border-radius: 8px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+}
+
+/* Estilo para el contenedor de la imagen */
+.character-image-container {
+    margin-right: 20px;
+}
+
+/* Estilo para la imagen */
+.character-image {
+    width: 200px;
+    height: 300px;
+    object-fit: cover;
+    border-radius: 10px;
+}
+
+/* Estilo para la información del personaje */
+.character-info {
+    color: #fff;
+}
+
+.character-info h1 {
+    margin-bottom: 15px;
+}
+
+.character-info p {
+    margin: 5px 0;
 }
