--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,7 +1,6 @@
  /* Estilo para la navbar */
  .navbar {
      background-color: black;
-     /* Fondo negro */
      padding-top: 0px;
      padding-bottom: 0px;
      box-shadow: 0px 3px 10px #FFC500;
@@ -13,18 +12,16 @@
  .navbar .navbar-text,
  .navbar .btn {
      color: white;
-     /* Color blanco para las letras de la navbar */
  }
 
  .navbar .navbar-brand:hover,
  .navbar .navbar-text:hover,
  .navbar .btn:hover {
      color: lightgrey;
-     /* Color gris claro al pasar el ratón */
  }
 
  .navbar-logo {
-     height: 90px;
+     height: 130px;
      /* Ajusta la altura del logo */
      object-fit: contain;
      /* Mantener la relación de aspecto */
@@ -51,12 +48,11 @@
      font-size: 45px;
      letter-spacing: 1px;
      color: #FFC500;
-     /* Amarillo dorado */
      text-shadow:
          0px 0px 1px #FFC500,
-         /* Sombra amarilla, aún más difusa */
+         /* Sombra amarilla difusa */
          0px 0px 3px #FFC500;
-     /* Sombra amarilla, la más difusa */
+     /* Sombra amarilla, difusa */
      text-align: center;
  }
 
@@ -68,7 +64,6 @@
      box-sizing: border-box;
      font-family: Arial, sans-serif;
      background-color: #000;
-     /* Color de fondo para áreas fuera de la imagen */
  }
 
 
@@ -118,7 +113,6 @@
 
  .card-img-top.characters {
      object-fit: contain;
-     /* Asegura que la imagen completa se ajuste dentro del contenedor */
  }
 
 
@@ -131,13 +125,9 @@
  .card-img-top {
      width: 100%;
      height: 250px;
-     /* Ajuste uniforme de la altura de las imágenes */
      object-fit: cover;
-     /* Ajustar la imagen dentro del contenedor para cubrirlo sin distorsión */
      object-position: center;
-     /* Centrar la imagen */
      background-color: #000;
-     /* Fondo negro para espacios vacíos */
  }
 
  .card-body {
@@ -155,14 +145,14 @@
  }
 
  .btn-primary {
-     background-color: #007bff;
-     border-color: #007bff;
-     transition: background-color 0.3s ease;
+     background-color: #1E90FF !important;
+     border-color: #1E90FF !important;
  }
 
  .btn-primary:hover {
-     background-color: #0056b3;
-     border-color: #004085;
+    transform: translateY(-5px);
+     background-color: #1E90FF !important;
+     border-color: #1E90FF !important;
  }
 
  .btn-warning {
@@ -173,13 +163,29 @@
  }
 
  .btn-warning:hover {
+    transform: translateY(-5px);
      background-color: #FFC500;
      border-color: #d39e00;
  }
 
+ .image-overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    color: white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 1.5rem;
+    text-align: center;
+    opacity: 0.3; /* La transparencia del texto */
+}
+
+
  /* Estilo de las flechas de navegación */
- .arrow-left,
- .arrow-right {
+ .arrow-left, .arrow-right {
      position: absolute;
      top: 50%;
      transform: translateY(-50%);
@@ -197,8 +203,7 @@
      transition: background-color 0.3s ease;
  }
 
- .arrow-left:hover,
- .arrow-right:hover {
+ .arrow-left:hover, .arrow-right:hover {
      background-color: rgba(0, 0, 0, 0.8);
  }
 
@@ -209,6 +214,7 @@
  .arrow-right {
      right: -20px;
  }
+
 /* Estilo para el contenedor de detalles */
 .details-container {
     display: flex;
@@ -225,7 +231,7 @@
 .details-image {
     width: 300px;
     height: 300px;
-    object-fit: cover;
+    object-fit: contain;
     border-radius: 10px;
 }
 
@@ -249,6 +255,18 @@
     margin: 0 auto;
     padding-bottom: 60px;
 }
+
+.jedi-font {
+    font-family: 'Star Jedi', sans-serif;
+    font-size: 45px;
+    color: #FFC500; 
+}
+
+.mensaje_favoritos {
+    color: red;
+}
+
+
 
  .footer {
      background-color: black;
